Added album name to template

--- a/src/youtube_web_downloader/app/templates/set_track_info.html
+++ b/src/youtube_web_downloader/app/templates/set_track_info.html
@@ -15,6 +15,10 @@
             {{ form.artist_name.label }}<br>
             {{ form.artist_name(size=20) }}
         </p>
+        <p>
+            {{ form.album_name.label }}<br>
+            {{ form.album_name(size=20) }}
+        </p>
         <p>{{ form.submit() }}</p>
     </form>
 </body>
