--- a/src/youtube_web_downloader/app/templates/home.html
+++ b/src/youtube_web_downloader/app/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>YouTube Downloader</title>
+    <title>Media Downloader</title>
 </head>
 <body>
     <h1>YouTube Downloader</h1>
@@ -16,5 +16,6 @@
             {{ form.audio() }}
         </p>
     </form>
+    <a href="{{ url_for('previous_downloads') }}">Previous Downloads</a>
 </body>
 </html>
