Rearranged functions into separate files

--- a/src/youtube_web_downloader/app/templates/home.html
+++ b/src/youtube_web_downloader/app/templates/home.html
@@ -16,6 +16,6 @@
             {{ form.audio() }}
         </p>
     </form>
-    <a href="{{ url_for('previous_downloads') }}">Previous Downloads</a>
+    <a href="{{ url_for('previous_bp.previous_downloads') }}">Previous Downloads</a>
 </body>
 </html>
