Re-download only implemented for audio as of now

--- a/src/youtube_web_downloader/app/templates/previous_downloads.html
+++ b/src/youtube_web_downloader/app/templates/previous_downloads.html
@@ -34,8 +34,12 @@
         <td>{{ details['album'] }}</td>
         <td>{{ details['title'] }}</td>
         <td>{{ details['type'] }}</td>
-        <td><a href="{{ url_for('set_track_info') }}?url={{ url }}">Re-download</a></td>
-        <td><a href="{{ url_for('delete') }}?url={{ url }}&file_path={{ details['file_path'] }}">Delete</a></td>
+        {% if details['type'] == 'audio' %}
+            <td><a href="{{ url_for('set_track_info') }}?url={{ url }}">Re-download</a></td>
+        {% else %}
+            <td>N/A</td>
+        {% endif %}
+        <td><a href="{{ url_for('previous_bp.delete') }}?url={{ url }}&file_path={{ details['file_path'] }}">Delete</a></td>
     </tr>
     {% endfor %}
 </tbody>
